Arithmetic reports each new input FITS image
In large operations (where a large number of input images are needed), it
will be helpful if Arithmetic reports each image that it reads in. So by
default it does this now. This behavior can be suppressed with the
`--quiet' (`-q') option.

In the Arithmetic documentation, a blank lines was put before and after
theq first example for the `where' operator to make it more readable in
info format (like the second example).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -7064,9 +7064,11 @@ Change the input (pixel) value `where' a certain condition holds. The
 conditional operators above can be used to define the condition. Three
 operands are required for @command{where}. The input format is demonstrated
 in this simplified example:
+
 @example
-astarithmetic in.fits condition.fits new.fits where
+$ astarithmetic in.fits condition.fits new.fits where
 @end example
+
 The third and second popped operands (@file{in.fits} and
 @file{condition.fits} above, see @ref{Reverse polish notation}) have to be
 images or all three operands have to be numbers. In the former case (when
